Fix for dark mode

--- a/src/scss/_shabad-page.scss
+++ b/src/scss/_shabad-page.scss
@@ -216,6 +216,10 @@ blockquote {
   background-position: top;
   background-repeat: no-repeat;
 
+  .dark-mode & {
+    background-image: none;
+  }
+
   .shabad-nav {
     .fullscreen-view & {
       display: none;
